--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
 
 <!-- Starting impress slideshow -->
 <div id="impress">
-	<div class="step">
+	<div id="overview" class="step" data-x="0" data-y="0" data-scale="3">
 		<h1>Big Data Framework</h1>
 	</div>
 
