--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,8 +19,9 @@
     <meta http-equiv="cleartype" content="on">
 
     {% if site.highlighter %} <link rel="stylesheet" href="{{ site.url }}/css/syntax.css" type='text/css'> {% endif %}
+    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ site.url }}/css/main.css" type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,600|Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }}" href="{{ site.url }}/feed.xml">
 
 </head>
@@ -39,7 +40,7 @@
 <!-- Starting impress slideshow -->
 <div id="impress">
 	<div id="overview" class="step" data-x="0" data-y="0" data-scale="3">
-		<h1>Big Data Framework</h1>
+		<h1 class="rdf-red">Big Data Framework</h1>
 	</div>
 
     {{ content }}
