--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,7 @@
 .color-2 { background: #34495e; } /* Description background */
 .color-3 { background: #f2f2f2; } /* Modules background */
 .color-4 { background: #7f8c8d; } /* Main menu background */
+.rdf-red {color: #ff0200}
 
 
 /* ------------------------------------------------------------------------
@@ -26,8 +27,9 @@
 html, body {
     background: #d1d1d1;
     font-family: 'Open Sans', sans-serif;
-    font-size: 24px;
-    margin: 0;
+    font-weight: 400;
+    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.7);
+    color: #333333;
 }
 
 a {
@@ -42,6 +44,13 @@ p { line-height: 1.4; }
 
 .top { text-align: right; }
 .inside { padding-left: 15px; }
+
+h1, h2, h3 {
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 400;
+	color: #222;
+	margin-top: 36px;
+	}
 
 
 /* ------------------------------------------------------------------------
