--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,9 +18,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta http-equiv="cleartype" content="on">
 
-    {% if site.highlighter %} <link rel="stylesheet" href="{{ site.url }}/css/syntax.css" type='text/css'> {% endif %}
+    {% if site.highlighter %} <link rel="stylesheet" href="css/syntax.css" type='text/css'> {% endif %}
     <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="{{ site.url }}/css/main.css" type='text/css'>
+    <link rel="stylesheet" href="css/main.css" type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,600|Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }}" href="{{ site.url }}/feed.xml">
 
