--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,6 +49,7 @@
 
 </div>
 
+<script async defer src="//hypothes.is/embed.js"></script>
 <script type="text/javascript" src="{{ site.url }}/js/impress.js"></script>
 <script>impress().init();</script>
 
