--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
 <div id="impress">
 	<div id="overview" class="step" data-x="0" data-y="0" data-scale="2">
         <h1 class="rdf-red">Big Data Framework</h1>
-        <img src="images/ResponsibleDataLogo80x110.png" style="
+        <img src="{{ site.url }}/images/ResponsibleDataLogo80x110.png" style="
     float: left;height: 80px;margin-right: 10px;">
         <p>Explore the framework with the arrow keys or click on a specific slide to zoom.</p>
 	</div>
