--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,6 +42,10 @@
         <h1 class="rdf-red">Big Data Framework</h1>
         <img src="{{ site.url }}/images/ResponsibleDataLogo80x110.png" style="
     float: left;height: 80px;margin-right: 10px;">
+    <img src="{{ site.url }}/images/datasociety_logotype_w_print-01.png" style="
+    float: left;height: 80px;">
+    <img src="{{ site.url }}/images/eR-bw-square.png" style="
+    float: left;height: 80px;">
         <p>Explore the framework with the arrow keys or click on a specific slide to zoom.</p>
 	</div>
 
