--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,6 +46,8 @@
     float: left;height: 80px;">
     <img src="{{ site.url }}/images/eR-bw-square.png" style="
     float: left;height: 80px;">
+    <img src="{{ site.url }}/images/leiden-bw-square.png" style="
+    float: left;height: 80px;">
         <p>Explore the framework with the arrow keys or click on a specific slide to zoom.</p>
 	</div>
 
