--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,7 @@ html, body {
     background: #d1d1d1;
     font-family: 'Open Sans', sans-serif;
     font-weight: 400;
-    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.7);
+    /*text-shadow: 0 1px 1px rgba(255, 255, 255, 0.7);*/
     color: #333333;
 }
 
