--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,10 +40,11 @@
 <div id="impress">
 	<div id="overview" class="step" data-x="0" data-y="0" data-scale="2">
         <h1 class="rdf-red">Big Data Framework</h1>
+        <p>With input from the Signal Program on Human Security and Technology at the Harvard Humanitarian Initiative.</p>
         <img src="{{ site.url }}/images/ResponsibleDataLogo80x110.png" style="
     float: left;height: 80px;margin-right: 10px;">
     <img src="{{ site.url }}/images/datasociety_logotype_w_print-01.png" style="
-    float: left;height: 50px;">
+    float: left;height: 40px;">
     <img src="{{ site.url }}/images/eR-bw-square.png" style="
     float: left;height: 80px;">
     <img src="{{ site.url }}/images/leiden-bw-square.png" style="
