--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
         <h1 class="rdf-red">Big Data Framework</h1>
         <p>With input from the Signal Program on Human Security and Technology at the Harvard Humanitarian Initiative.</p>
         <img class="logo" src="{{ site.url }}/images/ResponsibleDataLogo80x110.png">
-        <img class="logo" src="{{ site.url }}/images/datasociety_logotype_w_print-01.png" style="width:40px;">
+        <img class="logo" src="{{ site.url }}/images/datasociety_logotype_w_print-01.png" style="height:40px;">
         <img class="logo" src="{{ site.url }}/images/eR-bw-square.png">
         <img class="logo" src="{{ site.url }}/images/leiden-bw-square.png">
 	</div>
