--- a/css/main.css
+++ b/css/main.css
@@ -125,12 +125,34 @@ article p a {
 -  The content. -
 -------------------------------------------------------------------------*/
 
+
+.popup_div {
+    position:absolute;
+    left:100px !important;
+    top:100px !important;
+    background-color:#f2f2f2;
+    border: 2px #212121 solid;
+    text-align:left;
+    margin: 20px;
+    padding: 40px;
+    z-index: 100;
+    width: 80%;
+}
+
 #overview { width:400px; }
 
 .logo {
     float: left;
     height: 80px;
     margin-right: 10px;
+}
+
+#info a {
+    font-size: 30px;
+    color:white;
+    z-index: 100;
+    position: absolute;
+    margin: 20px;
 }
 
 .main-content {
