--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,7 +61,7 @@
 
 <script async defer src="//hypothes.is/embed.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-<script type="text/javascript" src="/js/site.js"></script>
+<script type="text/javascript" src="{{ site.url }}/js/site.js"></script>
 <script type="text/javascript" src="{{ site.url }}/js/impress.js"></script>
 
 <script>impress().init();</script>
